# eosim

./: .gitignore  Cargo.toml  README.md
docs/: abm_components.md  architecture.md
src/: context.rs  creation.rs  global_properties.rs  groups.rs  lib.rs  partitions.rs  people.rs  person_properties.rs  random.rs  regions.rs  reports.rs
src/data_containers/: heterogeneous_container.rs  indexset_person_container.rs  mod.rs  person_container.rs  vector_heterogeneous_container.rs  vector_person_container.rs
